--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-star-rating",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "keywords": [
     "Rating",
@@ -38,11 +38,13 @@
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-bump": "^2.5.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-load-plugins": "^1.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-task-listing": "^1.0.1",
@@ -53,7 +55,8 @@
     "sc5-styleguide": "^1.3.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
-    "wrench": "^1.5.9"
+    "wrench": "^1.5.9",
+    "yargs": "^6.4.0"
   },
   "dependencies": {},
   "scripts": {
@@ -61,6 +64,6 @@
     "build": "gulp css:compile-optimize",
     "styleguide": "gulp styleguide:watch",
     "version:bump": "gulp version:bump",
-    "release": "npm publish bower publish"
+    "release": "npm publish"
   }
 }
