--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   "homepage": "https://github.com/BioPhoton/css-star-rating#readme",
   "main": "dist/index.js",
   "devDependencies": {
+    "angularic-ionicon": "^1.1.0",
     "css-loader": "^0.26.0",
     "del": "^2.2.2",
     "extendify": "^1.0.0",
     "file-loader": "^0.9.0",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-bump": "^2.5.1",
