docs(package.json): update

--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "Star Rating",
     "Star-Rating",
     "Starrating",
+    "5-Star Rating",
     "Icon",
     "Iconfont",
     "Fonticons",
     "Fontawesome",
+    "Ionicons",
     "SVG",
-    "PNG",
-    "JPEG",
-    "CSS",
+    "CSS3",
     "Pure CSS",
     "CSS only",
-    "SCSS"
+    "SCSS",
+    "Flexbox"
   ],
   "description": "Css Star Rating is pure css component written in scss.",
   "author": "Michael Hladky",
@@ -58,6 +59,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-task-listing": "^1.0.1",
     "gulp-util": "^3.0.7",
+    "ionicons": "^2",
     "merge-stream": "^1.0.1",
     "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
