--- a/kss-config.json
+++ b/kss-config.json
@@ -4,7 +4,7 @@
   ],
   "destination":  "docs/",
   "css": [
-    "assets/css/star-rating.css",
+    "../dist/css/star-rating.css",
     "../node_modules/font-awesome/css/font-awesome.min.css"
   ],
   "js": []
