--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "kss": "^3.0.0-beta.18",
     "merge-stream": "^1.0.1",
     "node-sass": "^4.5.2",
+    "phantomcss": "^1.5.0",
     "sass-loader": "^4.0.2",
     "sc5-styleguide": "^1.3.2",
     "style-loader": "^0.13.1",
