--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-star-rating",
-  "version": "1.1.3",
+  "version": "1.2.3",
   "license": "MIT",
   "keywords": [
     "Rating",
@@ -81,8 +81,6 @@
     "styleguide": "npm run build && npm run styleguide:assets && npm run styleguide:build",
     "version:bump": "gulp version:bump",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "release": "npm publish",
-    "old_styleguide": "gulp styleguide:watch",
-    "old_styleguide:build": "gulp styleguide:build"
+    "release": "npm publish"
   }
 }
