--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-star-rating",
+  "name": "@smartbite/css-star-rating",
   "version": "1.3.0",
   "license": "MIT",
   "keywords": [
@@ -25,18 +25,15 @@
   "author": "Michael Hladky",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BioPhoton/css-star-rating.git"
+    "url": "git+https://github.com/SmartBite/css-star-rating.git"
   },
   "contributors": [
-    {
-      "name": "Michael Hladky",
-      "email": "michael@hladky.at"
-    }
+    "Michael Hladky <michael@hladky.at>"
   ],
   "bugs": {
-    "url": "https://github.com/BioPhoton/css-star-rating/issues"
+    "url": "https://github.com/SmartBite/css-star-rating/issues"
   },
-  "homepage": "https://github.com/BioPhoton/css-star-rating#readme",
+  "homepage": "https://github.com/SmartBite/css-star-rating#readme",
   "main": "dist/css/star-rating.css",
   "devDependencies": {
     "angularic-ionicon": "^1.1.1",
@@ -81,11 +78,14 @@
     "build:asstest": "copyfiles -u 0 README.md ./dist && copyfiles -u 0 ./package.json ./dist && copyfiles -u 0 ./LICENSE ./dist",
     "styleguide": "npm run styleguide:assets && npm run styleguide:build",
     "styleguide:assets": "copyfiles -u 2 ./dist/css/* ./docs/assets/css && copyfiles -u 2 ./dist/images/* ./docs/assets/images && copyfiles -u 2 ./docs-assets/fontawesome/fontawesome-all.min.css ./docs/assets/css && copyfiles -u 3 ./docs-assets/fontawesome/webfonts/* ./docs/assets/webfonts",
-    "styleguide:build": "./node_modules/.bin/kss --config ./kss-config.json",
+    "styleguide:build": "kss --config ./kss-config.json",
     "version:bump": "gulp version:bump",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "release:github": "conventional-github-releaser",
     "release:npm": "npm publish ./dist",
     "clean:dist": "rimraf dist"
+  },
+  "directories": {
+    "doc": "docs"
   }
 }
