--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,8 @@ jobs:
             node-version: '14'
       - name: Restore npm packages
         run: npm install
-      - name: Build package
-        run: npm run project:build
+      - name: Build package & config git workspace
+        run: npm run project:build && git config --global --add safe.directory /github/workspace
       - name: Publish if version has been updated
         if: github.ref == 'refs/heads/master'
         uses: pascalgn/npm-publish-action@1.3.8
